--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <!-- Other versions -->
         <version.acapy.client>0.7.33</version.acapy.client>
         <version.apache.camel>3.20.0</version.apache.camel>
+        <version.beust.klaxon>5.6</version.beust.klaxon>
         <version.fasterxml.jackson>2.14.1</version.fasterxml.jackson>
         <version.fusesource.jansi>2.4.0</version.fusesource.jansi>
         <version.google.crypto.tink>1.7.0</version.google.crypto.tink>
@@ -35,9 +36,9 @@
         <version.lazysodium>5.1.2</version.lazysodium>
         <version.nimbus.jose>9.28</version.nimbus.jose>
         <version.picocli>4.7.1</version.picocli>
-        <version.waltid.servicematrix>1.1.2</version.waltid.servicematrix>
+        <version.waltid.servicematrix>1.1.3</version.waltid.servicematrix>
         <version.waltid.ssikit>1.13.0-SNAPSHOT9</version.waltid.ssikit>
-        <version.waltid.vclib>1.24.4-SNAPSHOT</version.waltid.vclib>
+        <version.waltid.vclib>1.24.3</version.waltid.vclib>
         <version.junit>5.9.1</version.junit>
         <version.logback>1.4.5</version.logback>
         <version.slf4j>2.0.6</version.slf4j>
@@ -80,6 +81,11 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-core</artifactId>
                 <version>${version.logback}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.beust</groupId>
+                <artifactId>klaxon</artifactId>
+                <version>${version.beust.klaxon}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
