--- a/itests/src/test/resources/service-matrix.properties
+++ b/itests/src/test/resources/service-matrix.properties
@@ -17,7 +17,7 @@
 # limitations under the License.
 # #L%
 ###
-id.walt.services.crypto.CryptoService=org.nessus.didcomm.crypto.NessusCryptoService
+id.walt.services.crypto.CryptoService=org.nessus.didcomm.service.NessusCryptoService
 id.walt.services.keystore.KeyStoreService=id.walt.services.keystore.InMemoryKeyStoreService
 id.walt.services.context.ContextManager=id.walt.services.context.WaltIdContextManager
 
