--- a/cli/src/test/resources/config/service-matrix.properties
+++ b/cli/src/test/resources/config/service-matrix.properties
@@ -1,4 +1,4 @@
-id.walt.services.crypto.CryptoService=org.nessus.didcomm.crypto.NessusCryptoService
+id.walt.services.crypto.CryptoService=org.nessus.didcomm.service.NessusCryptoService
 id.walt.services.keystore.KeyStoreService=id.walt.services.keystore.InMemoryKeyStoreService
 id.walt.services.context.ContextManager=id.walt.services.context.WaltIdContextManager
 id.walt.signatory.Signatory=org.nessus.didcomm.service.NessusSignatory:src/test/resources/config/signatory.conf
