--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -27,7 +27,7 @@
 	<parent>
         <groupId>org.nessus.didcomm</groupId>
         <artifactId>nessus-didcomm</artifactId>
-        <version>23.2.1-SNAPSHOT</version>
+        <version>23.2.1</version>
     </parent>
 
     <name>Nessus DIDComm :: Agent</name>
