--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>nessus-didcomm</artifactId>
     <packaging>pom</packaging>
 
-    <version>23.2.1-SNAPSHOT</version>
+    <version>23.2.1</version>
 
     <name>Nessus DIDComm</name>
     <description>Digital Identity and Verifiable Credentials based on DIDComm V2</description>
@@ -16,7 +16,7 @@
         <connection>scm:git:https://github.com/tdiesler/nessus-didcomm</connection>
         <developerConnection>scm:git:git@github.com:tdiesler/nessus-didcomm</developerConnection>
         <url>https://github.com/tdiesler/nessus-didcomm</url>
-        <tag>0.23.2</tag>
+        <tag>23.2.1</tag>
     </scm>
 
     <properties>
