[#95] Verification policies from Walt.Id may leak into Nessus

--- a/agent/src/test/resources/config/service-matrix.properties
+++ b/agent/src/test/resources/config/service-matrix.properties
@@ -1,3 +1,4 @@
+id.walt.auditor.PolicyRegistryService=org.nessus.didcomm.service.NessusPolicyRegistryService
 id.walt.services.crypto.CryptoService=org.nessus.didcomm.service.NessusCryptoService
 id.walt.services.keystore.KeyStoreService=id.walt.services.keystore.InMemoryKeyStoreService
 id.walt.services.context.ContextManager=id.walt.services.context.WaltIdContextManager
