[#100] Focal use case: International Travel with Minor and Upgrade - first cut

--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -41,6 +41,10 @@
             <artifactId>klaxon</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.danubetech</groupId>
+            <artifactId>verifiable-credentials-java</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
         </dependency>
@@ -55,6 +59,10 @@
         <dependency>
             <groupId>com.google.crypto.tink</groupId>
             <artifactId>tink</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>json-schema-validator</artifactId>
         </dependency>
         <dependency>
             <groupId>id.walt</groupId>
