--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <version.acapy.client>0.7.33</version.acapy.client>
         <version.apache.camel>3.20.0</version.apache.camel>
         <version.beust.klaxon>5.6</version.beust.klaxon>
+        <version.danubtech.vcj>1.1-SNAPSHOT</version.danubtech.vcj>
         <version.didcommx.didcomm>0.3.3-SNAPSHOT</version.didcommx.didcomm>
         <version.fasterxml.jackson>2.14.1</version.fasterxml.jackson>
         <version.fusesource.jansi>2.4.0</version.fusesource.jansi>
@@ -35,6 +36,7 @@
         <version.kotlin.logging>3.0.4</version.kotlin.logging>
         <version.kotlinx.coroutines>1.6.4</version.kotlinx.coroutines>
         <version.lazysodium>5.1.2</version.lazysodium>
+        <version.networknt.validator>1.0.77</version.networknt.validator>
         <version.nimbus.jose>9.28</version.nimbus.jose>
         <version.picocli>4.7.1</version.picocli>
         <version.waltid.servicematrix>1.1.3</version.waltid.servicematrix>
@@ -88,6 +90,11 @@
                 <version>${version.beust.klaxon}</version>
             </dependency>
             <dependency>
+                <groupId>com.danubetech</groupId>
+                <artifactId>verifiable-credentials-java</artifactId>
+                <version>${version.danubtech.vcj}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
                 <artifactId>jackson-dataformat-yaml</artifactId>
                 <version>${version.fasterxml.jackson}</version>
@@ -106,6 +113,11 @@
                 <groupId>com.google.crypto.tink</groupId>
                 <artifactId>tink</artifactId>
                 <version>${version.google.crypto.tink}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.networknt</groupId>
+                <artifactId>json-schema-validator</artifactId>
+                <version>${version.networknt.validator}</version>
             </dependency>
             <dependency>
                 <groupId>com.nimbusds</groupId>
