--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
         <version-maven-source-plugin>3.2.1</version-maven-source-plugin>
         <version-maven-surefire-plugin>2.22.2</version-maven-surefire-plugin>
         <version-license-maven-plugin>2.0.0</version-license-maven-plugin>
+        <version-buildnumber-maven-plugin>3.0.0</version-buildnumber-maven-plugin>
 
         <!-- Other properties -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -300,6 +301,11 @@
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>buildnumber-maven-plugin</artifactId>
+                    <version>${version-buildnumber-maven-plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
                     <version>${version-maven-exec-plugin}</version>
                 </plugin>
@@ -361,6 +367,22 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <failIfNoTests>false</failIfNoTests>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <shortRevisionLength>8</shortRevisionLength>
+                    <timestampFormat>yyy-MM-dd HH:mm:ss</timestampFormat>
                 </configuration>
             </plugin>
         </plugins>
