--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,12 +1,10 @@
-FROM azul/zulu-openjdk-alpine:18.0.2-jre
+FROM azul/zulu-openjdk-alpine:18.0.2.1-jre
 
 RUN apk add libsodium
 
-# Copy to nessus-pulsex
-COPY distro /nessus-didcomm
+COPY target/distro /nessus-didcomm
 
 ENV NESSUS_HOME="/nessus-didcomm"
-
 WORKDIR "/nessus-didcomm"
 
 ENTRYPOINT ["./bin/didcomm.sh"]
