--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -65,6 +65,14 @@
             <artifactId>json-schema-validator</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
+        </dependency>
+        <dependency>
             <groupId>id.walt</groupId>
             <artifactId>waltid-ssikit</artifactId>
         </dependency>
@@ -83,10 +91,6 @@
         <dependency>
             <groupId>io.kotest</groupId>
             <artifactId>kotest-framework-api-jvm</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>network.idu.acapy</groupId>
-            <artifactId>aries-client-python</artifactId>
         </dependency>
         <dependency>
             <groupId>org.didcommx</groupId>
