--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
         <version.kotlin>1.8.0</version.kotlin>
 
         <!-- Other versions -->
-        <version.acapy.client>0.7.33</version.acapy.client>
         <version.apache.camel>3.20.0</version.apache.camel>
         <version.beust.klaxon>5.6</version.beust.klaxon>
         <version.danubtech.vcj>1.1-SNAPSHOT</version.danubtech.vcj>
@@ -40,6 +39,7 @@
         <version.networknt.validator>1.0.77</version.networknt.validator>
         <version.nimbus.jose>9.28</version.nimbus.jose>
         <version.picocli>4.7.1</version.picocli>
+        <version.squareup.okhttp3>4.10.0</version.squareup.okhttp3>
         <version.waltid.servicematrix>1.1.3</version.waltid.servicematrix>
         <version.waltid.ssikit>1.SNAPSHOT</version.waltid.ssikit>
         <version.waltid.vclib>1.24.3</version.waltid.vclib>
@@ -127,6 +127,16 @@
                 <version>${version.nimbus.jose}</version>
             </dependency>
             <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${version.squareup.okhttp3}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>logging-interceptor</artifactId>
+                <version>${version.squareup.okhttp3}</version>
+            </dependency>
+            <dependency>
                 <groupId>id.walt</groupId>
                 <artifactId>waltid-ssikit</artifactId>
                 <version>${version.waltid.ssikit}</version>
@@ -181,11 +191,6 @@
                 <groupId>io.kotest</groupId>
                 <artifactId>kotest-runner-junit5-jvm</artifactId>
                 <version>${version.kotest}</version>
-            </dependency>
-            <dependency>
-                <groupId>network.idu.acapy</groupId>
-                <artifactId>aries-client-python</artifactId>
-                <version>${version.acapy.client}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
