--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -53,18 +53,6 @@
             <artifactId>jackson-module-kotlin</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.terl</groupId>
-            <artifactId>lazysodium-java</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.google.crypto.tink</groupId>
-            <artifactId>tink</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.networknt</groupId>
-            <artifactId>json-schema-validator</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
         </dependency>
@@ -75,10 +63,6 @@
         <dependency>
             <groupId>id.walt</groupId>
             <artifactId>waltid-ssikit</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>id.walt</groupId>
-            <artifactId>waltid-ssikit-vclib</artifactId>
         </dependency>
         <dependency>
             <groupId>id.walt.servicematrix</groupId>
@@ -132,6 +116,26 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <configuration>
+                    <failOnWarning>true</failOnWarning>
+                    <ignoredUsedUndeclaredDependencies>
+                        <ignore>*</ignore>
+                    </ignoredUsedUndeclaredDependencies>
+                    <ignoredUnusedDeclaredDependencies>
+                        <ignore>id.walt.servicematrix:waltid-servicematrix</ignore>
+                        <ignore>org.apache.camel:camel-core</ignore>
+                        <ignore>org.apache.camel:camel-undertow</ignore>
+                        <ignore>ch.qos.logback:logback-classic</ignore>
+                        <ignore>io.kotest:kotest-runner-junit5-jvm</ignore>
+                    </ignoredUnusedDeclaredDependencies>
+                    <ignoredNonTestScopedDependencies>
+                        <ignore>*</ignore>
+                    </ignoredNonTestScopedDependencies>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
