--- a/pom.xml
+++ b/pom.xml
@@ -30,19 +30,15 @@
         <version.didcommx.peerdid>0.4.0-SNAPSHOT</version.didcommx.peerdid>
         <version.fasterxml.jackson>2.14.1</version.fasterxml.jackson>
         <version.fusesource.jansi>2.4.0</version.fusesource.jansi>
-        <version.google.crypto.tink>1.7.0</version.google.crypto.tink>
         <version.hyperledger.indy>1.16.0</version.hyperledger.indy>
         <version.kotest>5.5.5</version.kotest>
         <version.kotlin.logging>3.0.4</version.kotlin.logging>
         <version.kotlinx.coroutines>1.6.4</version.kotlinx.coroutines>
-        <version.lazysodium>5.1.2</version.lazysodium>
-        <version.networknt.validator>1.0.77</version.networknt.validator>
         <version.nimbus.jose>9.28</version.nimbus.jose>
         <version.picocli>4.7.1</version.picocli>
         <version.squareup.okhttp3>4.10.0</version.squareup.okhttp3>
         <version.waltid.servicematrix>1.1.3</version.waltid.servicematrix>
         <version.waltid.ssikit>1.SNAPSHOT</version.waltid.ssikit>
-        <version.waltid.vclib>1.24.3</version.waltid.vclib>
         <version.junit>5.9.1</version.junit>
         <version.logback>1.4.5</version.logback>
         <version.slf4j>2.0.6</version.slf4j>
@@ -53,6 +49,7 @@
         -->
         <version-maven-assembly-plugin>3.4.2</version-maven-assembly-plugin>
         <version-maven-exec-plugin>3.1.0</version-maven-exec-plugin>
+        <version-maven-dependency-plugin>3.5.0</version-maven-dependency-plugin>
         <version-maven-jar-plugin>3.3.0</version-maven-jar-plugin>
         <version-maven-release-plugin>3.0.0-M7</version-maven-release-plugin>
         <version-maven-source-plugin>3.2.1</version-maven-source-plugin>
@@ -107,21 +104,6 @@
                 <version>${version.fasterxml.jackson}</version>
             </dependency>
             <dependency>
-                <groupId>com.github.terl</groupId>
-                <artifactId>lazysodium-java</artifactId>
-                <version>${version.lazysodium}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.crypto.tink</groupId>
-                <artifactId>tink</artifactId>
-                <version>${version.google.crypto.tink}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.networknt</groupId>
-                <artifactId>json-schema-validator</artifactId>
-                <version>${version.networknt.validator}</version>
-            </dependency>
-            <dependency>
                 <groupId>com.nimbusds</groupId>
                 <artifactId>nimbus-jose-jwt</artifactId>
                 <version>${version.nimbus.jose}</version>
@@ -148,17 +130,6 @@
                     <exclusion>
                         <groupId>com.goterl</groupId>
                         <artifactId>lazysodium-java</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>id.walt</groupId>
-                <artifactId>waltid-ssikit-vclib</artifactId>
-                <version>${version.waltid.vclib}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.slf4j</groupId>
-                        <artifactId>slf4j-simple</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
@@ -281,6 +252,11 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>${version-maven-dependency-plugin}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>${version-maven-jar-plugin}</version>
                 </plugin>
@@ -357,10 +333,21 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>analyze-only</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>attach-sources</id>
                         <goals>
                             <goal>jar-no-fork</goal>
                         </goals>
