--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -66,7 +66,7 @@
         </dependency>
         <dependency>
             <groupId>id.walt.servicematrix</groupId>
-            <artifactId>waltid-servicematrix</artifactId>
+            <artifactId>WaltID-ServiceMatrix</artifactId>
         </dependency>
         <dependency>
             <groupId>io.github.microutils</groupId>
@@ -125,7 +125,7 @@
                         <ignore>*</ignore>
                     </ignoredUsedUndeclaredDependencies>
                     <ignoredUnusedDeclaredDependencies>
-                        <ignore>id.walt.servicematrix:waltid-servicematrix</ignore>
+                        <ignore>id.walt.servicematrix:WaltID-ServiceMatrix</ignore>
                         <ignore>org.apache.camel:camel-core</ignore>
                         <ignore>org.apache.camel:camel-undertow</ignore>
                         <ignore>ch.qos.logback:logback-classic</ignore>
