--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     </scm>
 
     <properties>
-        <version.kotlin>1.8.0</version.kotlin>
+        <version.kotlin>1.8.22</version.kotlin>
 
         <!-- Other versions -->
         <version.apache.camel>3.20.0</version.apache.camel>
@@ -39,7 +39,7 @@
         <version.picocli>4.7.1</version.picocli>
         <version.squareup.okhttp3>4.10.0</version.squareup.okhttp3>
         <version.waltid.servicematrix>1.1.3</version.waltid.servicematrix>
-        <version.waltid.ssikit>1.SNAPSHOT</version.waltid.ssikit>
+        <version.waltid.ssikit>1.2304101135.0</version.waltid.ssikit>
         <version.junit>5.9.1</version.junit>
         <version.logback>1.4.5</version.logback>
         <version.slf4j>2.0.6</version.slf4j>
@@ -258,8 +258,8 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
-                        <source>18</source>
-                        <target>18</target>
+                        <source>13</source>
+                        <target>13</target>
                     </configuration>
                 </plugin>
                 <plugin>
