--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -97,6 +97,10 @@
             <artifactId>indy</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-serialization-json</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
@@ -128,6 +132,7 @@
                         <ignore>id.walt.servicematrix:WaltID-ServiceMatrix</ignore>
                         <ignore>org.apache.camel:camel-core</ignore>
                         <ignore>org.apache.camel:camel-undertow</ignore>
+                        <ignore>org.jetbrains.kotlinx:kotlinx-serialization-json</ignore>
                         <ignore>ch.qos.logback:logback-classic</ignore>
                         <ignore>io.kotest:kotest-runner-junit5-jvm</ignore>
                     </ignoredUnusedDeclaredDependencies>
