--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,8 @@
         <version.picocli>4.7.1</version.picocli>
         <version.squareup.okhttp3>4.10.0</version.squareup.okhttp3>
         <version.waltid.servicematrix>1.1.3</version.waltid.servicematrix>
-        <version.waltid.ssikit>1.2304101135.0</version.waltid.ssikit>
+        <version.waltid.sdjwt>1.2306191408.0</version.waltid.sdjwt>
+        <version.waltid.ssikit>1.2306281832.0</version.waltid.ssikit>
         <version.junit>5.9.1</version.junit>
         <version.logback>1.4.5</version.logback>
         <version.slf4j>2.0.6</version.slf4j>
@@ -124,6 +125,11 @@
                 <groupId>com.squareup.okhttp3</groupId>
                 <artifactId>logging-interceptor</artifactId>
                 <version>${version.squareup.okhttp3}</version>
+            </dependency>
+            <dependency>
+                <groupId>id.walt</groupId>
+                <artifactId>waltid-sd-jwt-jvm</artifactId>
+                <version>${version.waltid.sdjwt}</version>
             </dependency>
             <dependency>
                 <groupId>id.walt</groupId>
