--- a/json/src/test/resources/config/signatory.conf
+++ b/json/src/test/resources/config/signatory.conf
@@ -1,8 +1,7 @@
 proofConfig {
-    issuerDid="todo"
-    issuerVerificationMethod="todo"
+    issuerDid = "undefined"
+    proofPurpose = "assertionMethod",
+    credentialsEndpoint = "https://example.edu/credential",
     proofType="LD_PROOF"
-    domain="todo"
-    nonce="todo"
 }
-templatesFolder: "data/vc/templates-runtime"
+templatesFolder: "target/vc-templates-runtime"
