--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -81,20 +81,16 @@
             <artifactId>kotest-framework-api-jvm</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.undertow</groupId>
+            <artifactId>undertow-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.didcommx</groupId>
             <artifactId>didcomm</artifactId>
         </dependency>
         <dependency>
             <groupId>org.didcommx</groupId>
             <artifactId>peerdid</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-undertow</artifactId>
         </dependency>
         <dependency>
             <groupId>org.hyperledger</groupId>
@@ -144,6 +140,14 @@
                     <ignoredNonTestScopedDependencies>
                         <ignore>*</ignore>
                     </ignoredNonTestScopedDependencies>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
         </plugins>
