--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.compiler.languageVersion>1.8</kotlin.compiler.languageVersion>
         <kotlin.compiler.apiVersion>1.8</kotlin.compiler.apiVersion>
-        <kotlin.compiler.jvmTarget>16</kotlin.compiler.jvmTarget>
+        <kotlin.compiler.jvmTarget>17</kotlin.compiler.jvmTarget>
         <kotlin.code.style>official</kotlin.code.style>
     </properties>
 
@@ -261,8 +261,8 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
-                        <source>18</source>
-                        <target>18</target>
+                        <source>${kotlin.compiler.jvmTarget}</source>
+                        <target>${kotlin.compiler.jvmTarget}</target>
                     </configuration>
                 </plugin>
                 <plugin>
