--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
         <!-- Other versions -->
         <version.beust.klaxon>5.6</version.beust.klaxon>
-        <version.danubtech.vcj>1.1-SNAPSHOT</version.danubtech.vcj>
+        <version.danubetech.vcj>1.6-SNAPSHOT</version.danubetech.vcj>
         <version.didcommx.didcomm>0.3.3-SNAPSHOT</version.didcommx.didcomm>
         <version.didcommx.peerdid>0.4.0-SNAPSHOT</version.didcommx.peerdid>
         <version.fasterxml.jackson>2.14.3</version.fasterxml.jackson>
@@ -33,7 +33,6 @@
         <version.kotlin.logging>3.0.4</version.kotlin.logging>
         <version.kotlinx.coroutines>1.6.4</version.kotlinx.coroutines>
         <version.kotlinx.serialization>1.5.1</version.kotlinx.serialization>
-        <version.nimbus.jose>9.28</version.nimbus.jose>
         <version.picocli>4.7.1</version.picocli>
         <version.squareup.okhttp3>4.10.0</version.squareup.okhttp3>
         <version.undertow>2.3.8.Final</version.undertow>
@@ -93,7 +92,7 @@
             <dependency>
                 <groupId>com.danubetech</groupId>
                 <artifactId>verifiable-credentials-java</artifactId>
-                <version>${version.danubtech.vcj}</version>
+                <version>${version.danubetech.vcj}</version>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
@@ -109,11 +108,6 @@
                 <groupId>com.fasterxml.jackson.module</groupId>
                 <artifactId>jackson-module-kotlin</artifactId>
                 <version>${version.fasterxml.jackson}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.nimbusds</groupId>
-                <artifactId>nimbus-jose-jwt</artifactId>
-                <version>${version.nimbus.jose}</version>
             </dependency>
             <dependency>
                 <groupId>com.squareup.okhttp3</groupId>
