--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -27,7 +27,7 @@
 	<parent>
         <groupId>org.nessus.didcomm</groupId>
         <artifactId>nessus-didcomm</artifactId>
-        <version>23.9.0-SNAPSHOT</version>
+        <version>23.9.0</version>
     </parent>
 
     <name>Nessus DIDComm :: CLI</name>
