--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>nessus-didcomm</artifactId>
     <packaging>pom</packaging>
 
-    <version>23.9.0-SNAPSHOT</version>
+    <version>23.9.0</version>
 
     <name>Nessus DIDComm</name>
     <description>Digital Identity and Verifiable Credentials based on DIDComm V2</description>
