--- a/helm/pvcs/postgres-pvc.yml
+++ b/helm/pvcs/postgres-pvc.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: wallet-pvc
+  name: postgres-pvc
 spec:
   accessModes:
     - ReadWriteOnce
