--- a/helm/templates/issuer-api.yml
+++ b/helm/templates/issuer-api.yml
@@ -33,7 +33,8 @@ spec:
     spec:
       containers:
         - name: issuer-api
-          image: nessusio/issuer-api:{{ .version }}
+          image: {{ $.Values.registry }}/waltid/issuer-api:{{ .version }}
+          imagePullPolicy: Always
           env:
             - name: ISSUER_API_PORT
               value: '7002'
@@ -56,12 +57,32 @@ kind: Service
 metadata:
   name: issuer-api
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 7002
-      nodePort: {{ .nodePort }}
   selector:
     app.kubernetes.io/name: issuer-api
+---
+
+# Issuer API IngressRoute
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: issuer-api
+  labels:
+    app.kubernetes.io/name: issuer-api
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - match: Host(`issuer-api.nessus-tech.io`)
+      kind: Rule
+      services:
+        - name: issuer-api
+          port: 7002
+  tls:
+    secretName: origin-tls
 ---
 
 {{- end }}
