--- a/helm/templates/verifier-api.yml
+++ b/helm/templates/verifier-api.yml
@@ -33,7 +33,8 @@ spec:
     spec:
       containers:
         - name: verifier-api
-          image: nessusio/verifier-api:{{ .version }}
+          image: {{ $.Values.registry }}/waltid/verifier-api:{{ .version }}
+          imagePullPolicy: Always
           env:
             - name: VERIFIER_API_PORT
               value: '7003'
@@ -55,12 +56,32 @@ kind: Service
 metadata:
   name: verifier-api
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 7003
-      nodePort: {{ .nodePort }}
   selector:
     app.kubernetes.io/name: verifier-api
+---
+
+# Wallet API IngressRoute
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: verifier-api
+  labels:
+    app.kubernetes.io/name: verifier-api
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - match: Host(`verifier-api.nessus-tech.io`)
+      kind: Rule
+      services:
+        - name: verifier-api
+          port: 7003
+  tls:
+    secretName: origin-tls
 ---
 
 {{- end }}
