--- a/helm/templates/wallet-demo.yml
+++ b/helm/templates/wallet-demo.yml
@@ -19,7 +19,8 @@ spec:
     spec:
       containers:
         - name: wallet-demo
-          image: nessusio/waltid-demo-wallet:{{ .version }}
+          image: {{ $.Values.registry }}/waltid/waltid-demo-wallet:{{ .version }}
+          imagePullPolicy: Always
           ports:
             - containerPort: 7101
 ---
@@ -31,12 +32,32 @@ kind: Service
 metadata:
   name: wallet-demo
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 7101
-      nodePort: {{ .nodePort }}
   selector:
     app.kubernetes.io/name: wallet-demo
+---
+
+# Wallet Demo IngressRoute
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: wallet-demo
+  labels:
+    app.kubernetes.io/name: wallet-demo
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - match: Host(`wallet-demo.nessus-tech.io`)
+      kind: Rule
+      services:
+        - name: wallet-demo
+          port: 7101
+  tls:
+    secretName: origin-tls
 ---
 
 {{- end }}
