--- a/helm/templates/wallet-api.yml
+++ b/helm/templates/wallet-api.yml
@@ -8,7 +8,7 @@ kind: ConfigMap
 metadata:
   name: wallet-config
 data:
-  {{- $files := $.Files.Glob "config/wallet-api/config/*" }}
+  {{- $files := $.Files.Glob "config/wallet-api/*" }}
   {{- range $path, $file := $files }}
   {{ base $path }}: |
   {{ toString $file | nindent 4 }}
